# zpm

./: .gitignore  .travis.yml  Cargo.toml  README.md  test.sh
.circleci/: config.yml
scripts/: cross_build.sh
src/: main.rs
src/core/: constants.rs  executor.rs  mod.rs
src/ops/: clean.rs  compile.rs  compute.rs  create.rs  export_verifier.rs  generate_proof.rs  mod.rs  setup.rs  verify.rs
src/zpm_core/: constants.rs  executor.rs  mod.rs
src/zpm_core/commands/: compile.rs  init.rs  mod.rs
