[package]
name = "zpm"
version = "0.1.0"
authors = ["Darko Macesic <darem966@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
log = "0.4"
dirs = "2.0"
env_logger = { version = "0.7.1", features = ["termcolor"] }
toml = "0.5.6"
serde = { version = "1.0.106", features = ["derive"] }